Add login layout

--- a/TemplateUI/home.html
+++ b/TemplateUI/home.html
@@ -31,15 +31,17 @@
       </nav>
     </header>
     <aside id="sidenav">
-      <a href="home.html"><i class="fa-solid fa-house"></i><b>HOME</b></a>
+      <a href="home.html"
+        ><i class="fa-solid fa-house"></i><b>Financial<br />Planning</b></a
+      >
       <a href="terms.html"
-        ><i class="fa-solid fa-timeline"></i><b>TERM LIST</b></a
+        ><i class="fa-solid fa-timeline"></i><b>Term List</b></a
       >
       <a href="plans.html"
-        ><i class="fa-solid fa-list-check"></i><b>PLAN LIST</b></a
+        ><i class="fa-solid fa-list-check"></i><b>Plan List</b></a
       >
       <a href="reports.html"
-        ><i class="fa-solid fa-file"></i><b>REPORT LIST</b></a
+        ><i class="fa-solid fa-file"></i><b>Report List</b></a
       >
     </aside>
     <main></main>
@@ -60,7 +62,7 @@
             400) +
           "px";
         element.classList.toggle("clicked");
-      };
+      }
     </script>
   </body>
 </html>
