--- a/TemplateUI/import.html
+++ b/TemplateUI/import.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home | Financial Planning</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/import.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <script
       src="https://kit.fontawesome.com/0d7fb5cc5d.js"
       crossorigin="anonymous"
@@ -47,8 +49,62 @@
         ><i class="fa-solid fa-file"></i><b>Report List</b></a
       >
     </aside>
-    <main></main>
+
+    <!-- Content -->
+    <main>
+      <div class="row">
+        <!-- Steps -->
+        <div class="col-3" id="steps">
+          <div class="step-title mb-5">
+            <div>
+              <h5>Import file</h5>
+              <h7>Please select file to import</h7>
+            </div>
+            <i class="fa-regular fa-circle-check"></i>
+          </div>
+
+          <div class="step-title mb-5">
+            <div>
+              <h5>Preview</h5>
+              <h7>Please preview the plan details before submitting</h7>
+            </div>
+            <i class="fa-regular fa-circle-check"></i>
+          </div>
+        </div>
+
+        <!-- Step content -->
+        <div class="col-9">
+          <h3 class="mb-5">Import file</h3>
+          <form>
+            <label for="term" class="form-label">Term*</label>
+            <select class="form-select mb-5" id="term">
+              <option selected>Please select term</option>
+            </select>
+            <button
+              class="form-control"
+              onclick="document.getElementById('file-input').click()"
+            >
+              <i class="fa-solid fa-cloud-arrow-up"></i>
+              <br />
+              <br />
+              <h5>Upload file</h5>
+              <h7>Click to import file</h7>
+            </button>
+            <input type="file" id="file-input" hidden />
+          </form>
+        </div>
+      </div>
+      <!-- Navigator -->
+      <div id="navigator" class="d-grid gap-2 d-md-block">
+        <button id="back-button" class="btn">Back</button>
+        <button class="btn btn-primary">Import</button>
+      </div>
+    </main>
+
+    <!-- Footer -->
     <footer></footer>
+
+    <!-- Script -->
     <script>
       function showUserMenu(element) {
         var usermenu = document.getElementById("usermenu");
