Complete preview layout

--- a/TemplateUI/preview.html
+++ b/TemplateUI/preview.html
@@ -75,7 +75,7 @@
 
         <!-- Step content -->
         <div class="col-9">
-          <h3 class="mb-5">Preview</h3>
+          <h3 class="mb-3">Preview</h3>
           <form class="row">
             <div class="col-6">
               <label for="term" class="form-label">Term</label>
@@ -121,14 +121,81 @@
                 <th class="col">PIC</th>
                 <th class="col">Notes</th>
             </thead>
-            <tbody></tbody>
+            <tbody>
+                <tr>
+                    <td>Promotion event</td>
+                    <td>Direct cost</td>
+                    <td>200,000,000</td>
+                    <td>3</td>
+                    <td>600,000,000</td>
+                    <td>IN22</td>
+                    <td>Internal</td>
+                    <td>AnhMN2</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>Promotion event</td>
+                    <td>Direct cost</td>
+                    <td>200,000,000</td>
+                    <td>3</td>
+                    <td>600,000,000</td>
+                    <td>IN22</td>
+                    <td>Internal</td>
+                    <td>AnhMN2</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>Promotion event</td>
+                    <td>Direct cost</td>
+                    <td>200,000,000</td>
+                    <td>3</td>
+                    <td>600,000,000</td>
+                    <td>IN22</td>
+                    <td>Internal</td>
+                    <td>AnhMN2</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>Promotion event</td>
+                    <td>Direct cost</td>
+                    <td>200,000,000</td>
+                    <td>3</td>
+                    <td>600,000,000</td>
+                    <td>IN22</td>
+                    <td>Internal</td>
+                    <td>AnhMN2</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>Promotion event</td>
+                    <td>Direct cost</td>
+                    <td>200,000,000</td>
+                    <td>3</td>
+                    <td>600,000,000</td>
+                    <td>IN22</td>
+                    <td>Internal</td>
+                    <td>AnhMN2</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>Promotion event</td>
+                    <td>Direct cost</td>
+                    <td>200,000,000</td>
+                    <td>3</td>
+                    <td>600,000,000</td>
+                    <td>IN22</td>
+                    <td>Internal</td>
+                    <td>AnhMN2</td>
+                    <td>N/A</td>
+                </tr>
+            </tbody>
           </table>
         </div>
       </div>
       <!-- Navigator -->
       <div id="navigator" class="d-grid gap-2 d-md-block">
         <button id="back-button" class="btn">Back</button>
-        <button class="btn btn-primary">Import</button>
+        <button class="btn btn-primary">Submit</button>
       </div>
     </main>
 
